tests/cases/errors/unmatched_paren.b
REM Test: Unmatched parentheses (should fail)
PRINT (2 + 3 * 4
